# json2dir

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage  default.nix  do  example-tree.json  example.json  flake.nix  home.md  json-to-dir.1.scd  json-to-dir.nix  json2dir.1.scd  output  package.nix  rust-toolchain.toml  test-all-with-coverage  to-dir.nix
.github/workflows/: build.yaml  check-for-full-region-coverage.yaml  check-full-region-coverage.yaml  coverage.yaml  full-region-coverage.yaml
docs/: addressing-limitations.md  dev.md  example-tree.json  json2dir-design.md  json2dir.1.scd  other-formats.md  todo.txt
scripts/: cargo-test  test  test-and-collect-coverage  test-cli
scripts/helpers/: default-cli-test-runner  pick-tree.jq  split-by-double-dash  test-and-check-for-full-coverage  test-and-collect-coverage  test-cli  test-coverage-collecting-cli-test-runner  tree.jq
src/: main.rs  tests.rs
tests/: cli.rs
