[package]
name = "json2dir"
version = "0.1.0"
edition = "2024"
authors = ["Alan Urmancheev"]
description = "Tool that converts JSON objects to directory trees"
repository = "https://github.com/alurm/json2dir"
license = "MIT"
categories = ["command-line-utilities", "config", "encoding", "filesystem", "template-engine"]
keywords = ["json"]
default-run = "json2dir"

[dependencies]
base64 = "0.22.1"
serde_json = "1.0.141"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "dir2json"
required-features = ["dir2json"]

[features]
dir2json = []
